network/main.tf
variable "vpc_id" {}

resource "aws_internet_gateway" "igw" {
  vpc_id = var.vpc_id

  tags = {
    Name = "igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-rt"
  }
}

resource "aws_subnet" "subnet_1" {
  vpc_id                  = var.vpc_id
  cidr_block              = "10.192.30.0/24"
  availability_zone       = "us-east-1a"

  tags = {
    Name = "subnet-1"
  }
}

resource "aws_subnet" "subnet_2" {
  vpc_id                  = var.vpc_id
  cidr_block              = "10.192.40.0/24"
  availability_zone       = "us-east-1b"

  tags = {
    Name = "subnet-2"
  }
}

resource "aws_route_table_association" "a_subnet_1" {
  subnet_id      = aws_subnet.subnet_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "a_subnet_2" {
  subnet_id      = aws_subnet.subnet_2.id
  route_table_id = aws_route_table.public.id
}
